5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1671_1105.log
== TEST (2019-04-24 15:36:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if ()
-- ERROR:
File "XXXX", line 5
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:36:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("casa: Stark")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:40:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa:Lannister")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:40:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:47:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
p
-- EXECUTION TIME:
0.136439
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 19, in <module>
    p
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:48:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:48:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.216433
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:48:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.211563
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: lula
Casa: Greyjoy
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:48:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.188159
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: lula
Casa: Greyjoy
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:48:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.184577
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1671/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:48:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.22598
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1671/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:48:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.260519
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: dragao
Casa: Targaryen
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:49:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:49:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("brasao")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.115721
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:52:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:52:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")

-- EXECUTION TIME:
0.130597
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:53:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:53:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("")
print("Entrada:",a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.136375
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
